deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kt-webapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels: 
    appgroup: kt-webapp
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: kt-webapp
          servicePort: 8080
      - path: /js
        backend:
          serviceName: kt-webapp-hotreload
          servicePort: 80
      - path: /sockjs-node
        backend:
          serviceName: kt-webapp-hotreload
          servicePort: 80
